--- a/backend/views/index.jade
+++ b/backend/views/index.jade
@@ -1,2 +1,3 @@
 block content
-  h1 It works from Jade
+  h1 Pax & Bonum Server
+  p This is the Parse server running on port 3001. To run the app, target the port 3000.
